# dm

./: .gitignore  alembic.ini  crud.py  deploy.sh  dm.ipynb  dual_momentum.py  fix_cagr_drawdown.py  industry_trends.py  job_service.py  kfrench.py  main.py  package-lock.json  package.json  pyproject.toml  test.ipynb  utils.py  vite.config.js
alembic/: env.py
alembic/versions/: 2025_06_09_1147-f21decd75296_create_users_table.py  2025_06_09_1625-60f50e982c8b_add_single_absolute_momentum_column.py  2025_06_17_1215-b2034c94bede_add_user_to_jobs.py  2025_07_08_0955-be6ae4a89ed8_create_table_industry_trends_jobs.py  2025_07_08_1034-85f6891d4807_add_benchmark_to_it_jobs.py  2025_07_11_1625-4816e5524d4d_add_max_assets_to_jobs.py  2025_07_15_1454-d038dd583b41_add_exclude_prev_month_to_dm_jobs.py  2025_08_08_0910-85d504531d53_add_rebalance_threshold_to_job.py  2025_09_16_1029-380f13ba0602_dm_cagr_drawdown.py  (+3 more)
data/: AGG.csv  ARGT.csv  BIL.csv  DGS1MO.csv  DGS3MO.csv  EIS.csv  EWC.csv  EWG.csv  EWJ.csv  EWL.csv  EWP.csv  EWZ.csv  GREK.csv  MCHI.csv  MSCI ACWI ex US.csv  MSCI World ex US.csv  QQQ.csv  SPY.csv  VBMFX.csv  VEU.csv  ^IXIC.csv  ^SPX.csv
db/: database.py  models.py  schemas.py
frontend/: chart.js  main.css  main.js
notebooks/: dm.ipynb  it-merged.ipynb  keltner-donchian-trend-following.ipynb
services/: it_job_service.py  job_service.py
static/: main.css
templates/: allocation.html.jinja  compare-perf.html.jinja  details.html.jinja  index.html.jinja  industry-trends.html.jinja  jobs.html.jinja  layout.html.jinja  trend-following.html.jinja
(+3 files in other folders)
