[project]
name = "dual-momentum"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.1",
    "fastapi[standard]>=0.115.12",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy>=2.2.6",
    "pandas-datareader>=0.10.0",
    "python-multipart>=0.0.20",
    "requests-cache>=1.2.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "yfinance>=0.2.61",
]
