[project]
name = "dual-momentum"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "fastapi[standard]>=0.116.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.3",
    "notebook>=7.4.4",
    "numpy>=2.3.1",
    "pandas-datareader>=0.10.0",
    "pandas-stubs==2.3.0.250703",
    "python-multipart>=0.0.20",
    "requests-cache>=1.2.1",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.5",
    "uvicorn>=0.35.0",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = 'single'
